# jenkins-mcp-server

./: .gitignore  README.md  package.json  pyproject.toml  pytest.ini
.github/workflows/: python-publish.yml  python-publish2.yml
python/: jenkins_mcp_server_enhanced.py
scripts/: check-python.js
src/jenkins_mcp/: jenkins_mcp_server_enhanced.py
