[project]
name = "mcp-jenkins-server"
version = "0.1.0"
description = "An MCP server for interacting with a Jenkins CI/CD server. Allows you to trigger jobs, check build statuses, and manage your Jenkins instance through MCP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.11.0",
    "requests>=2.32.4",
]
